<resources>
    <string name="app_name">QRcodeAttendance</string>

    <!-- Strings related to login -->
    <string name="prompt_email">-用户名-</string>
    <string name="login">-登 录-</string>
    <string name="prompt_password">-密  码-</string>
    <string name="action_sign_in">-登 录-</string>
    <string name="action_register">-注 册-</string>
    <string name="login_usernotice">-请输入用户名-</string>
    <string name="login_passwordnotice">-请输入密码-</string>
    <string name="action_sign_in_short">-登 录-</string>
    <string name="error_invalid_username">用户名错误！</string>
    <string name="error_invalid_password">密码长度至少为4位！</string>
    <string name="error_incorrect_password">密码输入错误！</string>
    <string name="error_field_required">这是必填栏目！</string>
    <string name="identity_choose">-登录身份-</string>
    <string name="remember_pwd">-记住密码-</string>
    <string name="action_settings">settings</string>
    <string name="attendance">-签到-</string>
    <string name="modify_password">-修改密码-</string>
    <string name="nothing">-没东西了-</string>
    <string name="cancer">取消</string>
    <string name="exit_confirm">您确定要退出吗？</string>
    <string name="watch_out">注意！</string>
    <string name="sure">确定</string>
    <string name="server_wrong">服务器出错</string>
    <string name="text_required">文本不能为空</string>

    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."</string>
    <string name="scan_sign_in">-扫一扫签到-</string>
    <string name="scanResult">-扫描结果-</string>
    <string name="exitLogin">-退出登录-</string>
    <string name="generateQRcode">-生成二维码-</string>
    <string name="picDescription">this is a picture</string>
    <string name="teacher_classid">-请输入你进行签到的班级号-</string>
    <string name="login_cancer">-取消登录-</string>
    <string name="classSign">课堂签到</string>
    <string name="modifyPassword">修改密码</string>
    <string name="myClass">我的课程</string>
    <string name="setting">设置</string>
    <string name="Sign">签到</string>

</resources>
