<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/app_theme_color_Beige"
    android:orientation="vertical" >

<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@null"

    >
    <TextView

        android:layout_marginTop="10dp"
        android:id="@+id/tv_teacher"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:background="@color/app_theme_color_Beige"
        android:singleLine="true"
        android:textColor="#ff1d1d1d"
        />
    <EditText
        android:id="@+id/teching_class"
        android:layout_width="fill_parent"
        android:layout_height="45dp"
        android:allowUndo="false"
        android:background="@color/app_theme_color_Beige"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/teacher_classid"
        android:imeOptions="actionDone"
        android:inputType="textPersonName"
        android:maxLength="16"
        android:maxLines="1"
        android:paddingRight="2dp"
        android:singleLine="true"
        android:textColor="#ff1d1d1d"
        android:textColorHighlight="#7e4d84"
        android:textColorHint="#ff666666"
        android:textSize="16.0sp"
        android:layout_weight="1">

        <requestFocus />
    </EditText>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:background="@color/app_theme_color_Azure"
            android:id="@+id/btn_add_qrcode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/generateQRcode" />


    </LinearLayout>

    <ImageView
        android:contentDescription="@string/picDescription"
        android:id="@+id/iv_qr_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <Button
            android:id="@+id/btn_exit_teacher"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_marginBottom="50dp"
            android:background="@color/app_theme_color_Azure"
            android:text="@string/exitLogin" />

    </RelativeLayout>

</LinearLayout>