<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_theme_color_Beige"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.moz.signin.LoginActivity">


    <ImageView
        android:id="@+id/login_icon_picture"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="120dp"
        android:src="@drawable/login_icon_picture"
        android:contentDescription="this is a icon picture" />

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone"
        android:layout_marginTop="30dp" />








    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:id="@+id/login_in_form">
    <LinearLayout
        android:id="@+id/login_input"

        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_icon_picture"
        android:background="@null"
        android:gravity="center_vertical"
        android:orientation="vertical">
        <EditText
            android:id="@+id/login_user_et"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:allowUndo="false"
            android:background="@color/ripple_material_light"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/login_usernotice"
            android:imeOptions="actionDone"
            android:inputType="textPersonName"
            android:maxLength="16"
            android:maxLines="1"
            android:paddingRight="2dp"
            android:singleLine="true"
            android:textColor="#ff1d1d1d"
            android:textColorHighlight="#7e4d84"
            android:textColorHint="#ff666666"
            android:textSize="16.0sp"
            android:layout_weight="1">
        </EditText>


        <EditText
            android:id="@+id/login_password_et"
            android:layout_width="fill_parent"
            android:layout_height="45dp"
            android:layout_weight="1"
            android:allowUndo="false"
            android:background="@color/ripple_material_light"
            android:ems="10"
            android:gravity="center_vertical"
            android:hint="@string/login_passwordnotice"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:maxLength="16"
            android:maxLines="1"
            android:singleLine="true"
            android:textColor="#ff1d1d1d"
            android:textColorHighlight="#7e4d84"
            android:textColorHint="#ff666666"
            android:textSize="16.0sp">
            <!--android:imeOptions ="actionDone"默认为键盘的下一个输入-->
            <!--android:ems ="10"只显示10个字符-->
        </EditText>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <CheckBox
                android:id="@+id/remember_password_check"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="0"
                android:background="@drawable/remember_pwd"
                android:button="@null"
                android:checked="false" />

            <TextView
                android:id="@+id/remember_password_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:hint="@string/remember_pwd"
                android:textColor="#ff1d1d1d"
                android:textColorHint="#ff666666" />

        </LinearLayout>

    </LinearLayout>

    <RadioGroup
        android:id="@+id/login_radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="30dp"
        android:orientation="horizontal"
        android:layout_weight="1">

        <TextView
            android:id="@+id/login_identity_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/identity_choose"
            android:textColor="#ff1d1d1d"
            android:textColorHint="#ff666666" />

        <RadioButton
            android:id="@+id/login_identity_student"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_weight="0"
            android:background="@drawable/identity_student"
            android:button="@null"
            android:checked="true" />

        <RadioButton
            android:id="@+id/login_identity_teacher"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="20dp"

            android:layout_weight="0"
            android:background="@drawable/identity_teacher"
            android:button="@null"
            android:checked="false" />



    </RadioGroup>

    <Button
        android:id="@+id/login_login"
        android:layout_width="150dp"
        android:layout_height="45dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dip"
        android:background="@drawable/btn_sign"
        android:gravity="center"
        android:hint="@string/login"
        android:textColor="#ff1d1d1d"
        android:textColorHint="#ff666666"
        android:textSize="17dp">

    </Button>
    </LinearLayout>
    </ScrollView>

</LinearLayout>
